--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,16 +5,28 @@
   },
   "extends": [
     "plugin:react/recommended",
+    "plugin:import/recommended",
     "airbnb",
     "airbnb/hooks",
-    "prettier",
-    "prettier/react"
+    "prettier"
   ],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react"],
-  "rules": {}
+  "plugins": ["react", "import"],
+  "rules": {
+    "import/no-unresolved": 2,
+    "import/named": 2,
+    "import/namespace": 2,
+    "import/export": 2,
+    "import/prefer-default-export": 0,
+    "react/function-component-definition": 0,
+    "arrow-body-style": 0,
+    "no-use-before-define": 0
+  },
+  "settings": {
+    "import/extensions": [".js", ".jsx"]
+  }
 }
