--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,8 @@
     "import/prefer-default-export": 0,
     "react/function-component-definition": 0,
     "arrow-body-style": 0,
-    "no-use-before-define": 0
+    "no-use-before-define": 0,
+    "react/prop-types": 0
   },
   "settings": {
     "import/extensions": [".js", ".jsx"]
