--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
     "lottie-react-native": "5.1.4",
+    "native-base": "^3.4.25",
     "react": "18.1.0",
+    "react-dom": "18.0.0",
     "react-native": "0.70.5",
     "react-native-svg": "13.4.0"
   },
